--- a/p.html
+++ b/p.html
@@ -57,7 +57,7 @@
         <div class="about-container">
             <div class="about-text">
                 <h2> O Caminho no Basquete e as Conquistas</h2>
-                    <p>Seu envolvimento com o basquete começou de forma despretensiosa, jogando na escola com seu primo e sua tia. No entanto, ao descobrir que poderia ser federado, encontrou no esporte um novo desafio e se entregou completamente ao jogo. Com o incentivo do Coach Lima, começou a evoluir rapidamente e a se destacar dentro de quadra.
+                    <p>Seu envolvimento com o basquete começou de forma despretensiosa, jogando na escola com seu primo e sua tia. No entanto, ao descobrir que poderia ser federado, encontrou no esporte um novo desafio e se entregou completamente ao jogo. Com o incentivo do Coach Lima e da bsa, começou a evoluir rapidamente e a se destacar dentro de quadra.
 
                         Davi passou por peneiras de grandes clubes e foi aprovado em todas que tentou, incluindo Flamengo, Botafogo e Fluminense. Inicialmente, optou pelo Botafogo devido à logística, e lá conquistou grandes resultados, como o 3º lugar na FBERJ 2024 e na Liga Ouro Sub-13 da Sul-Americana. No final do ano, seu coração falou mais alto e ele decidiu arriscar tudo para jogar pelo Flamengo, seu clube do coração. O desafio era enorme, já que ainda não havia dado seu estirão de crescimento, mas sua coragem e determinação foram recompensadas com a aprovação
                     
